[lworld] [AArch64] TestLWorld.java assertion failure in OopFlow::build_oop_map

XMLWordPrintable

    • aarch64
    • linux

      This happens reliably in TestLWorld::test9() scenario 0 on AArch64:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/mnt/nicgas01-pc/valhalla/src/hotspot/share/opto/buildOopMap.cpp:360), pid=8866, tid=8882
      # assert(false) failed: there should be a oop in OopMap instead of a live raw oop at safepoint
      #

        1. checkcast-igv.png
          checkcast-igv.png
          34 kB
        2. hs_err_pid177359.log
          128 kB
        3. SchedCrash.java
          2 kB
        4. TestLWorld.jtr
          136 kB

            Assignee:
            Nick Gasson
            Reporter:
            Nick Gasson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: