8264340: [lworld] [AArch64] TestLWorld.java assertion failure in OopFlow::build_oop_map

Reviewed-by: thartmann